--- a/webplayer/templates/preassessment.html
+++ b/webplayer/templates/preassessment.html
@@ -172,15 +172,15 @@
 
               <div class="form-check form-check-inline">
                 <input class="form-check-input" type="radio" name="d3" id="btn3_2" value="option1" />
-                <label class="form-check-label" for="inlineRadio1">人脸整体清晰度高</label>
+                <label class="form-check-label" for="inlineRadio1">面部清晰度高</label>
               </div>
               <div class="form-check form-check-inline">
                 <input class="form-check-input" type="radio" name="d3" id="btn3_1" value="option2" />
-                <label class="form-check-label" for="inlineRadio2">人脸整体清晰度中等</label>
+                <label class="form-check-label" for="inlineRadio2">面部清晰度中等</label>
               </div>
               <div class="form-check form-check-inline">
                 <input class="form-check-input" type="radio" name="d3" id="btn3_0" value="option3" />
-                <label class="form-check-label" for="inlineRadio3">人脸整体清晰度低</label>
+                <label class="form-check-label" for="inlineRadio3">面部清晰度低</label>
               </div>
 
             </div>
